@@ -1,3 +1,14 @@
+2004-05-03 Alvaro del Castillo  <acs@barrapunto.com>
+
+        * src/planner-resource-dialog.c: implemented undo for resource cost
+        in the resource editor dialog.
+
+        * src/planner-resource-dialog.c:
+        (resource_dialog_close_clicked_cb)
+        (resource_dialog_resource_removed_cb)
+        Disconnect signal for resource removed so we don't try to destroy
+        a widget that doesn't exist
+
 2004-05-03  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-project.c: (imrp_project_add_calendar_day),
